[build-system]
requires = ["setuptools"]

[project]
name = "my_package"
version = "0.0.1"
description = "My Package"
authors = [
     {name = "Author", email = "author@example.com"},
]
# Dynamically include the README file, as specified in the `tool.setuptools.dynamic` section.
dynamic = ["readme"]
dependencies = [
    # Put dependencies here.
]

[tool.setuptools.dynamic]
readme = {file=["README.md"], content-type="text/markdown"}

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pep8-naming",
    "mypy",
    "pytest",
    "pytest-timeout",
    "isort",
]

[tool.black]
line-length = 120
include = '\.pyi?$' # Includes .pyi stub files
exclude = ''

[tool.isort]
profile = black
known_first_party = ["my_package"]
known_third_party = ["ray", "torch"]

# NOTE: flake8 settings for black compatibility:
# https://ljvmiranda921.github.io/notebook/2018/06/21/precommits-using-black-and-flake8/
[flake8]
extend-ignore = E203, E266, E501, W503, F403, E731
max-line-length = 120
max-complexity = 18
select = B,C,E,F,I,W,T4,B9,N # <- Should figure out if I want all of these

# Should look into the below more
[tool.pytest.ini_options]
timeout = 60
testpaths = ["tests"]
markers = []
